Исправление ошибок в тексте

--- a/Parsing.ipynb
+++ b/Parsing.ipynb
@@ -5219,7 +5219,7 @@
     "with open('data.json', 'w', encoding='utf-8') as file:\n",
     "    json.dump(response.json(), file)\n",
     "\n",
-    "response.json()"
+    "response.json().get('data',{}).get('products',[])[0]"
    ]
   },
   {
@@ -5874,11 +5874,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scatter plot распределения рейтинга от количества отзывов\n",
+    "### Scatter plot распределения рейтинга в зависимости от количества отзывов\n",
     "\n",
-    "Данный график показывает распределние рейтинга от количества отзывов. \n",
+    "Этот график отражает взаимосвязь между рейтингом и количеством отзывов.\n",
     "\n",
-    "Я решил проверить гипотезу: \"Как зависит рейтинг от количества отзывов?\"."
+    "Цель анализа — проверить гипотезу: “Существует ли зависимость рейтинга от количества отзывов?”"
    ]
   },
   {
@@ -5912,7 +5912,7 @@
    "source": [
     "### Вывод\n",
     "\n",
-    "Можно заметить, что с возрастанием количества оценок рейтинг усредняется, что говорит нам о том что рейтинги расперделены честно."
+    "Можно заметить, что с возрастанием количества оценок рейтинг усредняется, что говорит нам о том что рейтинги расперделены честно.Можно заметить, что с возрастанием количества оценок рейтинг усредняется, что говорит нам о том что рейтинги расперделены честно."
    ]
   },
   {
@@ -6000,7 +6000,7 @@
    "source": [
     "### Вывод\n",
     "\n",
-    "По данному графику видно, что большинство товаров имеют минимальное количетсво отзвов. Это говорит о том, что скорее всего в данной нисше много маленьких магазинов, которых вытеснели крупные компании с рынка. От сюда можно сдлеать вывод, что заходить в данную нисшу не выгодно заходить из-за высокой конкуренции не только с крупными продавцамими, но и с крпуными."
+    "По данному графику видно, что большинство товаров имеют минимальное количетсво отзвов. Это говорит о том, что скорее всего в данной нисше много маленьких магазинов, которых вытеснели крупные компании с рынка. От сюда можно сдлеать вывод, что заходить в данную нисшу не выгодно заходить из-за высокой конкуренции не только с маленькими продавцамими, но и с крпуными."
    ]
   },
   {
@@ -6055,13 +6055,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Вывод по проделанной работе\n",
+    "### Вывод по работе\n",
     "\n",
-    "1) Были изученны методы парсинга данных с динамических сайтов с помощью API запросов.\n",
+    "1) В ходе выполненной работы были изучены и применены современные методы парсинга данных с динамических сайтов с использованием API-запросов. Это позволило эффективно получить необходимую информацию, минуя ограничения традиционных способов парсинга.\n",
     "\n",
-    "2) Найдена зависимость между количеством отзывов и ретингом.\n",
+    "2) Проведен анализ взаимосвязи между количеством отзывов и рейтингом, который подтвердил гипотезу о наличии зависимости. Было выявлено, что с ростом числа отзывов рейтинг стремится к усреднённому значению, что свидетельствует о сбалансированности оценок и их объективности.\n",
     "\n",
-    "3) Был проведене анализ рынки и вывод о том, что заход в данную категорию будет не очень выгоден."
+    "3) Кроме того, был выполнен анализ рыночной ситуации в выбранной категории. На основе полученных данных сделан вывод о том, что выход на данный рынок может быть экономически нецелесообразным. Причинами такого вывода являются высокая конкуренция, низкая рентабельность и ограниченный потенциал для роста в рассматриваемом сегменте.\n",
+    "\n",
+    "Таким образом, проделанная работа не только дала ценный опыт работы с динамическими данными и их анализом, но и помогла сформировать обоснованные рекомендации для принятия стратегических решений."
    ]
   }
  ],
